[chromium] setNeedsCommit on non-composited host layers should trigger commit https://bugs.webkit.org/show_bug.cgi?id=73711

Reviewed by James Robinson.

Source/WebCore:

Pipe non-composited content host syncs to setNeedsCommit.

Since now the NonCompositedContentHost generates setNeedsCommit, don't
call it unnecessarily, e.g. calling setBackgroundColor to the same
color each frame should not retrigger more commits.

* platform/graphics/chromium/GraphicsLayerChromium.cpp:
(WebCore::GraphicsLayerChromium::setAnchorPoint):
(WebCore::GraphicsLayerChromium::setTransform):
(WebCore::GraphicsLayerChromium::setChildrenTransform):
(WebCore::GraphicsLayerChromium::setMasksToBounds):
(WebCore::GraphicsLayerChromium::setBackgroundColor):
(WebCore::GraphicsLayerChromium::clearBackgroundColor):
(WebCore::GraphicsLayerChromium::setContentsOpaque):
(WebCore::GraphicsLayerChromium::setBackfaceVisibility):
(WebCore::GraphicsLayerChromium::setOpacity):
* platform/graphics/chromium/LayerChromium.cpp:
(WebCore::LayerChromium::setNeedsCommit):
(WebCore::LayerChromium::setAnchorPoint):
(WebCore::LayerChromium::setAnchorPointZ):
(WebCore::LayerChromium::setBackgroundColor):
(WebCore::LayerChromium::setMasksToBounds):
(WebCore::LayerChromium::setMaskLayer):
(WebCore::LayerChromium::setOpacity):
(WebCore::LayerChromium::setOpaque):
(WebCore::LayerChromium::setPosition):
(WebCore::LayerChromium::setSublayerTransform):
(WebCore::LayerChromium::setTransform):
(WebCore::LayerChromium::setScrollPosition):
(WebCore::LayerChromium::setScrollable):
(WebCore::LayerChromium::setDoubleSided):
* platform/graphics/chromium/LayerChromium.h:
(WebCore::LayerChromium::setReplicaLayer):
* platform/graphics/chromium/NonCompositedContentHost.cpp:
(WebCore::NonCompositedContentHost::notifySyncRequired):
* platform/graphics/chromium/NonCompositedContentHost.h:

Source/WebKit/chromium:

Add some tests to make sure that modifying the noncomposited content
host triggers commits.

Properties that trigger setNeedsCommit should only do so when the
property changes. Additionally, make more property changes properly
trigger commits.

* tests/LayerChromiumTest.cpp:


Canonical link: https://commits.webkit.org/90539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102091 268f45cc-cd09-0410-ab3c-d52691b4dbfc