Source/WebCore/platform/graphics/chromium/NonCompositedContentHost.h
@@ -59,9 +59,10 @@ public:
     void protectVisibleTileTextures();
     GraphicsLayer* topLevelRootLayer() const { return m_graphicsLayer.get(); }
 
-private:
+protected:
     explicit NonCompositedContentHost(PassOwnPtr<LayerPainterChromium> contentPaint);
 
+private:
     // GraphicsLayerClient
     virtual void notifyAnimationStarted(const GraphicsLayer*, double time);
     virtual void notifySyncRequired(const GraphicsLayer*);
